--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage": "https://dev-namansahu.github.io/crytodashboard",
+{"homepage": "https://dev-namansahu.github.io/CrytocurrencyDashboard",
   "name": "cryptocurrencydashboard",
   "version": "0.1.0",
   "private": true,
